--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ThreeJS Source</title>
+    <title>ThreeJS seeded world algorithm</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
+        }
+        a{
+            color: deeppink;
+        }
+        #footer{
+            position: fixed;
+            bottom: 0;
+            left:0;
+            width: 100%;
+            height:50px;
+            background: black;
+            opacity: 0.85;
+            text-align: center;
+            color: white;
+            line-height: 50px;
         }
     </style>
 </head>
@@ -13,6 +28,10 @@
 
 <!-- Div which will hold the Output -->
 <div id="WebGL-output">
+</div>
+
+<div id="footer">
+    ThreeJS seeded world algorithm ( under dev ) - Radoslaw Swiat - <a href="seemore.html">See more</a>
 </div>
 </body>
 </html>
