refactor webpack config [in progress], add eslint, add editor config

--- a/src/index.html
+++ b/src/index.html
@@ -45,13 +45,6 @@
     </style>
 </head>
 <body>
-
-<!-- Div which will hold the Output -->
-<div id="WebGL-output">
-</div>
-
-<div id="footer">
-    ThreeJS seeded world algorithm ( under dev ) - Radoslaw Swiat - <a href="seemore.html">See more</a>
-</div>
+    <div id="WebGL-output"></div>
 </body>
 </html>
